# 2022_2_WhyNot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: CI.yml  cmake.yml
Tests/: CMakeLists.txt  test.cpp
artifacts/: README.md
include/: Destroyable.h  Drawable.h  Field.h  Graph.h  MainWindow.h  MathCalculator.h  MathChecker.h  MathConverter.h  MathExpression.h  MathParser.h  Object.h  Object_type_id.h  Player.h  Undestroyable.h  client.h  game.h  lobby_players.h  obstacle.h  room.h  server.h
linters/: CPPLINT.cfg  linters.sh
qmake/: MathShooter.pro
src/: Destroyable.cpp  Drawable.cpp  Field.cpp  Graph.cpp  MathCalculator.cpp  MathChecker.cpp  MathConverter.cpp  MathExpression.cpp  MathParser.cpp  Object.cpp  Player.cpp  Undestroyable.cpp  client.cpp  game.cpp  lobby_players.cpp  main.cpp  moc_field.cpp  moc_game.cpp  obstacle.cpp  room.cpp  server.cpp
tests/: test.cpp
